--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 12pt;
 	color: #333;
-	line-height: 1.5;
+	line-height: 1.8;
 }
 body {
+  width: 100%;
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
@@ -19,7 +20,9 @@ ul, li {
 }
 a {
 	color: orange;
-	text-decoration: none;
+  text-decoration: none;
+  min-width: 48px;
+  min-height: 48px;
 }
 a:hover, a:focus {
 	color: #3397db;
@@ -37,14 +40,17 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
+  width: 100%;
   min-height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 #footer {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -60,18 +66,22 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  /* font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 10px; */
+  font-size: 12pt;
+  font-weight: 150;
+  letter-spacing: 5px;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 20px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: calc(100% - 40px);
+    /* width: calc(50% - 80px); */
 }
 
 /* Display list items side by side */
@@ -106,9 +116,10 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  /* height: 50px; */
   background-color: #3397DB;
   align-items: center;
+  padding: 16px 0 10px;
 }
 .filter-options h2 {
   color: white;
@@ -126,7 +137,8 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: calc(100% - 2 * 10px);
+  /* width: 200px; */
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,26 +146,32 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 30px 0px 60px;
   text-align: center;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  /* margin: 15px; */
+  margin-bottom: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 100%
+  /* width: calc(100% - 2 * 30px); */
+  /* width: 270px; */
 }
-#restaurants-list .restaurant-img {
+.restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  width: 100%;
+  /* min-height: 248px; */
+  /* min-width: 100%; */
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -171,41 +189,48 @@ nav h1 a {
 }
 #restaurants-list li a {
   background-color: orange;
+  min-width: auto;
+  min-height: auto;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
 }
 
+.restaurants-list-text {
+  min-height: 120px;
+}
+
 /* ====================== Restaurant Details ====================== */
 .inside header {
   position: fixed;
   top: 0;
-  width: 100%;
-  z-index: 1000;
+  width: 100vw;
+  z-index: 1002;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  padding-top: 130px;
+  /* position: fixed; */
+  /* right: 0; */
+  /* top: 80px; */
+  width: 100%;
+  /* width: 50%; */
 }
 .inside #map {
   background-color: #ccc;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,7 +243,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
+	/* width: 90%; */
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,16 +260,19 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
+	/* width: 90%; */
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 20px 20px 30px;
+  /* padding: 140px 20px 30px; */
+  width: calc(100% - 40px);
+  /* width: 50%; */
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 20px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -258,18 +287,181 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  /* width: 85%; */
+  width: calc(100% - 40px);
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
+}
+
+
+
+/* Media Queries */
+@media screen and (max-width: 499px) {
+  #restaurants-list li {
+    border-left: none;
+    border-right: none;
+  }
+}
+
+
+@media screen and (min-width: 580px) {
+  nav h1 a {
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 10px;
+  }
+
+  .restaurants-list-text {
+    min-height: 140px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  body,td,th,p, #rastaurant-address {
+    font-size: 14pt;
+  }
+
+  #breadcrumb li {
+    font-size: 12pt;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  nav h1 a {
+    font-size: 18pt;
+    font-weight: 200;
+    letter-spacing: 10px;
+  }
+}
+
+@media screen and (min-width: 580px) and (max-width: 899px) {
+  #restaurants-list li {
+    margin-right: 20px;
+    width: calc(50% - 30px - 2 * 30px - 2 * 2px);
+  }
+
+  #restaurants-list li:nth-child(odd) {
+    margin-left: 20px;
+  }
+
+
+  #breadcrumb {
+    padding: 10px 30px 16px;
+    width: calc(100% - 60px);
+  }
+
+  #restaurant-container, #reviews-container {
+    padding: 20px 30px 30px;
+    width: calc(100% - 60px);
+  }
+  #reviews-container {
+    padding: 30px 30px 80px;
+  }
+}
+
+@media screen and (min-width: 900px)  and (max-width: 1199px) {
+  #restaurants-list li {
+    margin-right: 20px;
+    width: calc(33.333333% - 26.666666px - 2 * 30px - 2 * 2px);
+  }
+
+  #restaurants-list li:nth-child(3n+1) {
+    margin-left: 20px;
+  }
+
+
+  #breadcrumb {
+    padding: 10px 40px 16px;
+    width: calc(100% - 80px);
+  }
+
+  #restaurant-container, #reviews-container {
+    padding: 20px 40px 30px;
+    width: calc(100% - 80px);
+  }
+  #reviews-container {
+    padding: 30px 40px 80px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #restaurants-list li {
+    margin-right: 20px;
+    width: calc(25% - 25px - 2 * 30px - 2 * 2px);
+  }
+
+  #restaurants-list li:nth-child(4n+1) {
+    margin-left: 20px;
+  }
+
+
+  #breadcrumb {
+    padding: 10px 50px 16px;
+    width: calc(100% - 100px);
+  }
+
+  #restaurant-container {
+    padding: 20px 50px 30px;
+  }
+  #reviews-container {
+    padding: 30px 50px 80px;
+    background-color: #f3f3f3;
+    z-index: 1001;
+  }
+
+  #restaurant-container, #reviews-container {
+    width: calc(100% - 100px);
+    z-index: 1001;
+  }
+
+  #reviews-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  #reviews-list li {
+    width: calc(50% - 40px - 8px - 2 * 2px);
+  }
+
+  #reviews-list li:nth-child(odd) {
+    margin-right: 16px;
+  }
+
+  #restaurant-img, #restaurant-cuisine {
+    width: 50%;
+  }
+  
+
+  .inside #map-container {
+    background: blue none repeat scroll 0 0;
+    height: 85vh;
+    position: fixed;
+    right: 0;
+    width: calc(50% - 50px);
+  }
+  .inside #map {
+    background-color: #ccc;
+    height: 100%;
+    width: 100%;
+  }
+  .inside #maincontent {
+    width: 100%;
+  } 
+  /* .inside #maincontent {
+    width: 60%;
+  }  */
+  .inside #footer {
+    z-index: 1002;
+  }
 }
